--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+pfwallcl-0.2.0 / 2023-01-31
+===========================
+ * Introduce .INI file for user settings
+ * Use fixed point arithmetic instead of FPU emulation.
+
 pfwallcl-0.1.0 / 2022-08-31
 ===========================
  * Initial release
